update routes for db

--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,31 @@
 # App's running environment
-NODE_ENV=
+NODE_ENV=development
 
 # App's running port
-PORT=
+PORT=3001
 
 # Server url
-SERVER_URL=
+SERVER_URL=localhost
 
 # Cors origin url
-CORS_ORIGIN=
+CORS_ORIGIN=localhost
 
 # Run node -e "console.log(require('crypto').randomBytes(256).toString('base64'));" in your console to generate a secret
-ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=your-access-token-secret-here
+REFRESH_TOKEN_SECRET=your-refresh-token-secret-here
 
-REFRESH_TOKEN_SECRET=
+ACCESS_TOKEN_EXPIRE=3600 // Time in seconds for access token expiration
+REFRESH_TOKEN_EXPIRE=604800 // Time in seconds for refresh token expiration
 
-ACCESS_TOKEN_EXPIRE=
+REFRESH_TOKEN_COOKIE_NAME=your-cookie-name-here
 
-REFRESH_TOKEN_EXPIRE=
+MYSQL_DATABASE=your-mysql-database-name-here
+MYSQL_ROOT_PASSWORD=your-mysql-root-password-here
 
-# name of the refresh token cookie
-REFRESH_TOKEN_COOKIE_NAME=
+DATABASE_URL=mysql://your-username:your-password@your-host:your-port/your-database-name
 
-MYSQL_DATABASE=
-MYSQL_ROOT_PASSWORD=
-
-# Example: mysql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL=
-
-# Configuration for the emial service
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USERNAME=
-SMTP_PASSWORD=
-EMAIL_FROM=
+SMTP_HOST=your-smtp-host-here
+SMTP_PORT=your-smtp-port-here
+SMTP_USERNAME=your-smtp-username-here
+SMTP_PASSWORD=your-smtp-password-here
+EMAIL_FROM=your-email-from@address.here
