--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "http-status": "^1.6.2",
+    "install": "^0.13.0",
+    "jest-mock": "^29.5.0",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
+    "npm": "^9.6.7",
+    "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "utility-types": "^3.10.0",
     "uuid": "^9.0.0",
