--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
     "npm": "^9.6.7",
+    "sequelize": "^6.32.0",
     "sqlite3": "^5.1.6",
     "ts-node": "^10.9.1",
     "utility-types": "^3.10.0",
