--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ SMTP_PORT=your-smtp-port-here
 SMTP_USERNAME=your-smtp-username-here
 SMTP_PASSWORD=your-smtp-password-here
 EMAIL_FROM=your-email-from@address.here
+
+DBPATH=your-db-path-here
