--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.35.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "fs-extra": "^11.1.1",
     "helmet": "^6.0.1",
     "http-status": "^1.6.2",
     "install": "^0.13.0",
@@ -55,6 +56,7 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.4.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/nodemailer": "^6.4.7",
