update mysql boiler

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,10 @@ SMTP_PASSWORD=your-smtp-password-here
 EMAIL_FROM=your-email-from@address.here
 
 DBPATH=your-db-path-here
+
+
+MYSQLUSER=****
+MYSQLPASS=****
+MYSQLHOST=localhost
+MYSQLPORT=3306
+MYSQLDB=employees
