--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jest-mock": "^29.5.0",
     "joi": "^17.8.4",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.3",
     "nodemailer": "^6.9.1",
     "npm": "^9.6.7",
     "sequelize": "^6.32.0",
