--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": "off",
+    "@typescript-eslint/no-explicit-any": "off",
 
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/semi": "off",
