--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
 
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/semi": "off",
+    "@typescript-eslint/no-confusing-void-expression": "off",
     "@typescript-eslint/member-delimiter-style": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
