--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --ignore src/routes/db --trace-warnings ./dist/index.js",
+    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --ignore src/db --trace-warnings ./dist/index.js",
     "build": "tsc --project './tsconfig.build.json'",
     "start": "yarn run build && NODE_ENV=production node --trace-warnings ./dist/index.js",
     "watch": "tsc --project './tsconfig.build.json' --watch",
