--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "quotes": ["error", "single"],
     "semi": "off",
     "@typescript-eslint/no-explicit-any": "off",
-
+    "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/indent": "off",
     "@typescript-eslint/semi": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
