--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "./dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --ignore src/db  --ignore src/data --trace-warnings ./dist/index.js",
+    "dev": "tsc --project './tsconfig.build.json' --watch &NODE_ENV=development nodemon --ignore src/models  --ignore src/data --trace-warnings ./dist/index.js",
     "build": "tsc --project './tsconfig.build.json'",
     "start": "yarn run build && NODE_ENV=production node --trace-warnings ./dist/index.js",
     "watch": "tsc --project './tsconfig.build.json' --watch",
@@ -77,7 +77,7 @@
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "nodemon": "^2.0.21",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "prisma": "^4.11.0",
     "supertest": "^6.3.3",
