--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,11 +39,14 @@
     "@typescript-eslint/prefer-optional-chain": "off",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/consistent-type-assertions": "off",
+    "@typescript-eslint/prefer-nullish-coalescing": "off",
 
     // plugin: node/recommended
     "node/exports-style": ["error", "module.exports"],
+
     "node/file-extension-in-import": "off",
     "node/no-missing-import": "off",
+    "node/no-unpublished-import": "off",
     "node/prefer-global/buffer": ["error", "always"],
     "node/prefer-global/console": ["error", "always"],
     "node/prefer-global/process": ["error", "always"],
